--- a/app/assets/stylesheets/team_index.css
+++ b/app/assets/stylesheets/team_index.css
@@ -8,13 +8,17 @@ body {
 }
 
 .container {
-  display: flex;
+  display: inline-block;
+  width: 25%;
 }
 
 h1 {
-  text-decoration:underline;
   color: #222;
   font-family: Roboto;
+}
+
+h2 {
+  text-decoration: underline;
 }
 
 .division {
