--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+
+
+ .t_name {
+  margin-bottom: 30px;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 30px;
+}
+
+.container {
+  display: inline-block;
+  width: 25%;
+  overflow: hidden;
+}
+
+h1 {
+  color: #222;
+  font-family: "Roboto";
+}
+
+.team {
+  text-decoration: underline;
+}
+
+.division {
+  font-size: 1.5em;
+}
+
+.last {
+  margin-bottom: 50px;
+}
+
+h2 {
+  font-size: 1.8em;
+  margin-bottom: 25px;
+}
+
+.time_stamp {
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+  margin-left: 20px;
+  text-align: right;
+}
+
+.teams_show {
+  overflow: hidden;
+}
