--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,7 +1,15 @@
-<h1>NFL Divisions</h1>
-<div class="container">
+<%= link_to "Teams", "/teams" %>
+  <h1>NFL Divisions</h1>
+<%= link_to "New Division", "/divisions/new" %>
   <h2>AFC</h2>
-  <% @divisions.each do |division| %>
-    <%= division.get_conference("AFC") %>
+  <% @divisions_sorted_by_created_date.each do |division| %>
+    <% if division.conference == "AFC" %>
+      <h3><%= link_to division.name, "/divisions/#{division.id}" %> <span class="time_stamp"><%= division.created_at%></span></h3>
+    <% end %>
   <% end %>
-</div>
+  <h2>NFC</h2>
+  <% @divisions_sorted_by_created_date.each do |division| %>
+    <% if division.conference == "NFC" %>
+      <h3><%= link_to division.name, "/divisions/#{division.id}" %></h3>
+    <% end %>
+  <% end %>
