--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <nav>
+      <%= link_to "Divisions", "/divisions" %> | <%= link_to "Teams", "/teams" %>
+    </nav>
     <%= yield %>
   </body>
 </html>
