--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,12 @@ body {
   margin: 30px;
 }
 
+.parenth {
+  font-size: 12px;
+  color: #333;
+  margin-left: -3px;
+}
+
 .container {
   display: inline-block;
   width: 25%;
@@ -61,5 +67,26 @@ h2 {
 }
 
 .teams_show {
+  overflow: hidden;
+}
+
+nav {
+  margin-bottom: 30px;
+}
+
+label {
+  margin-left: 15px;
+  margin-right: 3px;
+}
+
+.submit {
+  margin-left: 8px;
+}
+
+.sb_text {
+  width: .5em;
+}
+
+form {
   overflow: hidden;
 }
