--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+ .link {
+  margin-top: 20px;
+  margin-bottom: 30px;
 
  .t_name {
   margin-bottom: 30px;
@@ -24,14 +27,8 @@ body {
   margin: 30px;
 }
 
-.parenth {
-  font-size: 12px;
-  color: #333;
-  margin-left: -3px;
-}
-
 .container {
-  display: inline-block;
+  display: inline;
   width: 25%;
   overflow: hidden;
 }
@@ -53,7 +50,7 @@ h1 {
   margin-bottom: 50px;
 }
 
-h2 {
+h1 {
   font-size: 1.8em;
   margin-bottom: 25px;
 }
@@ -66,27 +63,8 @@ h2 {
   text-align: right;
 }
 
-.teams_show {
-  overflow: hidden;
+.div_update_link {
+  margin-top: 30px;
+  margin-bottom: -10px;
 }
 
-nav {
-  margin-bottom: 30px;
-}
-
-label {
-  margin-left: 15px;
-  margin-right: 3px;
-}
-
-.submit {
-  margin-left: 8px;
-}
-
-.sb_text {
-  width: .5em;
-}
-
-form {
-  overflow: hidden;
-}
