Finish all UI functionality through User Story #18

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -6,4 +6,4 @@
 <p>Rank: <%= @team.rank %></p>
 <p>First Year: <%= @team.year_started %></p>
 <p>Won a Super Bowl: <%= @team.super_bowl %></p>
-<%= link_to 'Update Team', "/teams/#{@team.id}/edit", params:{:name => "division" %>
+<%= link_to 'Update Team', "/teams/#{@team.id}/edit", params:{:name => "division"} %>
