--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,11 +1,11 @@
 
 <h1>NFL Divisions</h1>
-<%= link_to "New Division", "/divisions/new" %>
+<div><%= link_to "New Division", "/divisions/new" %></div>
 
 <% @divisions.each do |division| %>
-<h3><%= link_to division.name, "/divisions/#{division.id}" %><span class="time_stamp"><%= division.created_at%>
-  <%= link_to "Edit", "/divisions/#{division.id}/edit", method: :get %>
-  </span>
+<h3><%= link_to division.name, "/divisions/#{division.id}" %><span class="time_stamp"><%= division.created_at%> </span><span class="link-edit" style="font-size: 1em; font-weight: .5em"><%= link_to "Edit", "/divisions/#{division.id}/edit", method: :get %></span>
+ 
+</h3>
 </h3>
   <p>Conference: <%= division.conference%></p>
   <p class="last">Won a Super Bowl: <%= division.sb_five %></p>
