--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,18 +1,20 @@
-<%= form_with url: "/teams/#{@team.id}", method: :patch, data: { turbo: false } do |form| %>
-<%= form.hidden_field :division_id, :value => @team.division_id %>
-<%= form.label :name %>
-<%= form.text_field :name, :value => @team.name, :size => "25", :value => @team.name %>
-<%= form.label :wins %>
-<%= form.text_field :wins, :value => @team.wins, :size => "8" %>
-<%= form.label :losses %>
-<%= form.text_field :losses, :value => @team.losses, :size => "8" %>
-<%= form.label :ties %>
-<%= form.text_field :ties, :value => @team.ties, :size => "8" %>
-<%= form.label :rank %>
-<%= form.text_field :rank, :value => @team.rank, :size => "5" %>
-<%= form.label :year_started %>
-<%= form.text_field :year_started, :value => @team.year_started, :size => "5" %>
-<%= form.label :won_super_bowl %>
-<%= form.text_field :super_bowl, :value => @team.super_bowl, :size => "5" %>
-<%= form.submit "Update", :class => "submit" %>
-<% end %>
+<div style="margin-top: 30px" class="team-edit-container">
+  <%= form_with url: "/teams/#{@team.id}", method: :patch, data: { turbo: false } do |form| %>
+  <%= form.hidden_field :division_id, :value => @team.division_id %>
+  <%= form.label :name %>
+  <span class="link-edit"><%= form.text_field :name, :value => @team.name, :size => "25", :value => @team.name %></span>
+  <%= form.label :wins %>
+  <span class="link-edit"><%= form.text_field :wins, :value => @team.wins, :size => "8" %></span>
+  <%= form.label :losses %>
+  <span class="link-edit"><%= form.text_field :losses, :value => @team.losses, :size => "8" %></span>
+  <%= form.label :ties %>
+  <span class="link-edit"><%= form.text_field :ties, :value => @team.ties, :size => "8" %></span>
+  <%= form.label :rank %>
+  <span class="link-edit"><%= form.text_field :rank, :value => @team.rank, :size => "5" %></span>
+  <%= form.label :year_started %>
+  <span class="link-edit"><%= form.text_field :year_started, :value => @team.year_started, :size => "5" %></span>
+  <span style="margin-left: 7px"><%= form.label :won_super_bowl %></span>
+ <span class="link-edit"> <%= form.text_field :super_bowl, :value => @team.super_bowl, :size => "5" %></span>
+  <span class="link-edit"> <%= form.submit "Update", :class => "submit" %>
+  <% end %>
+</div>
