--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,8 +1,8 @@
 
-<h1>NFL Teams</h1>
+<h1 class="nfl-hdr">NFL Teams</h1>
   <article class="container">
     <% @teams.each do |team| %>
-      <p class="team"><a href="/teams/<%= team.id %>"><%= team.name %></a></p>
+      <p class="team"><a href="/teams/<%= team.id %>"><%= team.name %></a><span style="margin-left: 10px" class="link"><%= link_to "Edit", "/teams/#{team.id}/edit", method: :get %></span></p>
       <p>Wins: <%= team.wins %>
       <p>Losses: <%= team.losses %>
       <p>Ties: <%= team.ties %>
