--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -6,3 +6,4 @@
 <p>Rank: <%= @team.rank %></p>
 <p>First Year: <%= @team.year_started %></p>
 <p>Won a Super Bowl: <%= @team.super_bowl %></p>
+<p><%= button_to "Delete Team", "/teams/#{@team.id}", method: :delete %></p>
