--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 30px;
+  text-wrap: nowrap;
 }
 
 .container {
@@ -93,3 +94,21 @@ h1 {
   margin-bottom: 0px;
 }
 
+button:hover {
+  color: purple;
+  transform: scale(1.1);
+}
+
+button {
+  color: blue;
+  border:none;
+  background: none;
+  margin: -8px;
+  padding: none;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+button:visited {
+  color: purple;
+}
